[WFLY-16388] Remote Outbound Connection HeartBeat settings not working
Issue: https://issues.redhat.com/browse/WFLY-16388
Related: https://redhat.atlassian.net/browse/WFCORE-7611